# bank_AML_FullyDistributed

./: README.md
Part1/: Cargo.toml  README.txt
Part1/src/: main.rs
bank-threshold-csv/: Cargo.toml  README.txt
bank-threshold-csv/data/: bank_0.csv  bank_1.csv  bank_2.csv  bank_3.csv  bank_4.csv
bank-threshold-csv/src/: generate_data.rs  main.rs
bank-threshold-csv/src/data/: bank_0.csv  bank_1.csv  bank_2.csv  bank_3.csv  bank_4.csv
