[package]
name = "bank-gold-distributed"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "1.4", features = ["integer"] }
rand = "0.8"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
